force-app/main/default/objects/GLW_Customer__c/fields/GLW_City__c.field-meta.xml
<CustomField>
    <fullName>GLW_City__c</fullName>
    <label>City</label>
    <length>128</length>
    <type>Text</type>
</CustomField>