force-app/main/default/objects/GLW_Customer__c/fields/GLW_Country__c.field-meta.xml
<CustomField>
    <fullName>GLW_Country__c</fullName>
    <label>Country</label>
    <length>128</length>
    <type>Text</type>
</CustomField>