force-app/main/default/objects/GLW_Customer__c/fields/GLW_FirstName__c.field-meta.xml
<CustomField>
    <fullName>GLW_FirstName__c</fullName>
    <label>First Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>