force-app/main/default/objects/GLW_Customer__c/fields/GLW_LastName__c.field-meta.xml
<CustomField>
    <fullName>GLW_LastName__c</fullName>
    <label>Last Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>