force-app/main/default/objects/GLW_Customer__c/fields/GLW_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>GLW_PostalCode__c</fullName>
    <label>PostalCode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>