force-app/main/default/objects/GLW_Customer__c/fields/GLW_State__c.field-meta.xml
<CustomField>
    <fullName>GLW_State__c</fullName>
    <label>State</label>
    <length>128</length>
    <type>Text</type>
</CustomField>