force-app/main/default/objects/GLW_Customer__c/fields/GLW_Street__c.field-meta.xml
<CustomField>
    <fullName>GLW_Street__c</fullName>
    <label>Street</label>
    <length>128</length>
    <type>Text</type>
</CustomField>