force-app/main/default/objects/GLW_Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GLW_FirstName__c</columns>
    <columns>GLW_LastName__c</columns>
    <columns>GLW_Country__c</columns>
    <columns>GLW_State__c</columns>
    <columns>GLW_City__c</columns>
    <columns>GLW_Street__c</columns>
    <columns>GLW_PostalCode__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>